force-app/main/default/objects/Service_Region__c/Service_Region__c.object-meta.xml
<CustomObject>
    <description>Maps geographic service regions to Accounts for routing and reporting segmentation. Core layer object — present in all verticals. Do not modify from a vertical branch.</description>
    <label>Service Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>