force-app/main/default/objects/Service_Region__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account this service region is associated with. Nullable — regions can exist as reference data before being linked to a specific account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Regions</relationshipLabel>
    <relationshipName>Service_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>