force-app/main/default/objects/Service_Region__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary client contact associated with this service region.</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Regions</relationshipLabel>
    <relationshipName>Service_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>