force-app/main/default/objects/Service_Region__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>State or province within the country for finer-grained routing segmentation.</description>
    <label>State / Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>